# scraping-jobs

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: nueva-funcionalidad.md
src/: __init__.py  app.py
src/config/: __init__.py  db_config.py
src/controllers/: base_controller.py  busqueda_controller.py  empresas_controller.py  modalidades_controller.py  oferta_controller.py  paginas_controller.py
src/models/schemas/: __init__.py  busqueda.py  empresa.py  modalidad.py  oferta.py  pagina.py
src/routes/: ofertas.py
src/services/: ComputrabajoWebScrapingService.py
